fix: fix responsiveness of dashboard on smaller screens

--- a/index.css
+++ b/index.css
@@ -1,9 +1,8 @@
-
 @font-face {
-  font-family: 'Michroma-Regular';
-  src: url('assets/MichromaNunito_Sans/Michroma/Michroma-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'Michroma-Regular';
+    src: url('assets/MichromaNunito_Sans/Michroma/Michroma-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 body {
@@ -11,13 +10,15 @@ body {
     overflow-x: hidden;
     background-color: rgb(10 25 48);
     letter-spacing: 0.1em;
+
     @media (max-width:480px) {
         font-size: xx-small !important;
 
 
     }
-    
+
 }
+
 .side-bar {
     background: rgb(22 42 69);
     width: 10em;
@@ -93,18 +94,17 @@ h6 {
         margin-left: 4em;
     }
 }
-.header{
-    border-bottom: rgb(123 145 195);
-}
-h3{
-     color: rgb(113 167 162);
-      text-shadow:
-   0 0 2px #0fa, 0 0 3px #0fa, 0 0 300px #0fa, 0 0 251px #0fa;
+
+h3 {
+    color: rgb(113 167 162);
+    text-shadow:
+        0 0 2px #0fa, 0 0 3px #0fa, 0 0 300px #0fa, 0 0 251px #0fa;
 }
 
-small{
- color: rgb(123 145 195);
+small {
+    color: rgb(123 145 195);
 }
+
 .box {
     background-color: rgb(23 47 71);
     padding: 0.2em;
@@ -113,16 +113,15 @@ small{
     border-radius: 5px;
     position: relative;
     z-index: 1;
-    height: 7em;
     padding-bottom: 0.2em;
+
     @media (max-width:480px) {
         width: 70%;
         align-self: center;
         font-size: xx-small;
-        height: 9em;
         margin-left: 4em;
     }
-    
+
 }
 
 .container-custom {
@@ -130,7 +129,7 @@ small{
     padding: 1em;
     border-radius: 10px;
     margin-top: 1em !important;
-width: 75em !important;
+
 }
 
 .box2 {
@@ -140,40 +139,39 @@ width: 75em !important;
     text-align: center;
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-   
+
     font-weight: bold;
 }
 
-.right{
+.right {
     font-size: xx-small;
     text-align: right;
-color: rgb(123 145 195);
+    color: rgb(123 145 195);
 }
+
 .heading {
     font-size: 24px;
     font-weight: bold;
     color: rgb(113 167 162);
-   text-shadow:
-   0 0 2px #0fa, 0 0 2px #0fa, 0 0 3px #0fa, 0 0 300px #0fa, 0 0 251px #0fa;
+    text-shadow:
+        0 0 2px #0fa, 0 0 2px #0fa, 0 0 3px #0fa, 0 0 300px #0fa, 0 0 251px #0fa;
 }
 
 .container-custom2 {
     width: 100%;
-
     background-color: rgb(22 42 69);
     padding: 30px;
     border-radius: 10px;
     position: relative;
-    width: 75em !important;
 }
 
 #sidebarMenu {
-    
-    background-color:rgb(22 42 69) ;
+
+    background-color: rgb(22 42 69);
 }
 
-.bg-light{
-    background: rgb(22, 42,69) !important;
+.bg-light {
+    background: rgb(22, 42, 69) !important;
 }
 
 .heading2 {
@@ -181,19 +179,19 @@ color: rgb(123 145 195);
     font-weight: bold;
     color: rgb(113 167 162);
     position: absolute;
-  text-shadow:
-    0 0 2px #0fa, 0 0 2px #0fa, 0 0 3px #0fa, 0 0 300px #0fa, 0 0 251px #0fa;
+    text-shadow:
+        0 0 2px #0fa, 0 0 2px #0fa, 0 0 3px #0fa, 0 0 300px #0fa, 0 0 251px #0fa;
     top: 15px;
     left: 20px;
 }
 
 .content {
     text-align: center;
-    font-size: 20px;e
-    color: rgb(113 167 162);
+    font-size: 20px;
+    e color: rgb(113 167 162);
     margin-top: 40px;
-     text-shadow:
-     0 0 2px #0fa, 0 0 2px #0fa, 0 0 3px #0fa, 0 0 300px #0fa, 0 0 251px #0fa;
+    text-shadow:
+        0 0 2px #0fa, 0 0 2px #0fa, 0 0 3px #0fa, 0 0 300px #0fa, 0 0 251px #0fa;
 }
 
 @media (max-width: 768px) {
